--- a/style.css
+++ b/style.css
@@ -4,24 +4,35 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.header img {
     width: 100%;
 }
-.aaa .more_inf {
+.header__subtitle {
     font-family: fantasy, cursive;
 }
 
+.heading {
+    color: #333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333;
+    padding: 30px 0 10px;
+    text-transform: uppercase;
+    display: block;
+    margin: 0 0 20px;
+}
+
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header { text-align: center;
 }
 }
-.centered-main-page-element {
+.main-wrapper {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -57,8 +68,8 @@ button:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+h3
+/*label[for='new-task']*/ {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,10 +95,10 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for='new-task'] {
-    display: block;
-    margin: 0 0 20px;
-}
+/*label[for='new-task'] {*/
+/*    display: block;*/
+/*    margin: 0 0 20px;*/
+/*}*/
 input#new-task {
     width: 318px;
 }
