--- a/style.css
+++ b/style.css
@@ -149,11 +149,11 @@ ul li input[type=text] {
     display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.task-list__item--editable input[type=text] {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+ul li.task-list__item--editable label {
     display:none;
 }
