style(basic-3.5): add indent for blocks in css

--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ ul li input[type=text] {
 }
 
 @media (max-width:768px) {
-    .header { text-align: center;
+    .header {
+        text-align: center;
     }
 }
