--- a/style.css
+++ b/style.css
@@ -5,6 +5,33 @@ body {
     font-family: Lato, sans-serif;
 }
 
+ul {
+    margin:0;
+    padding: 0px;
+}
+
+li, h3 {
+    list-style: none;
+}
+
+input,button{
+    outline: none;
+}
+
+button {
+    background: none;
+    border: 0px;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+}
+
+button:hover {
+    color: #3a3A3a;
+}
+
 .header {
     width: 500px;
     margin: 0 auto;
@@ -45,6 +72,15 @@ body {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
+    font-size: 18px;
+    line-height: 18px;
+    height: 21px;
+    padding: 0 9px;
+    border: 1px solid #dDd;
+    background: #FFF;
+    border-radius: 6px;
+    font-family: Lato, sans-serif;
+    color: #888;
 }
 
 .task-list__text {
@@ -55,6 +91,10 @@ body {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
+}
+
+.task-list__text--editable {
+    display: none;
 }
 
 .task-list__input {
@@ -74,47 +114,11 @@ body {
     display: none;
 }
 
-ul li.task-list__item--editable input[type=text] {
+.task-list__input--editable {
     display: inline-block;
     width: 224px
 }
 
-ul li.task-list__item--editable label {
-    display: none;
-}
-
-.task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
-}
-
-ul {
-    margin:0;
-    padding: 0px;
-}
-
-li, h3 {
-    list-style: none;
-}
-
-input,button{
-    outline: none;
-}
-
-button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
-}
-
-button:hover {
-    color: #3a3A3a;
-}
 
 /* Heading */
 h3
@@ -128,28 +132,12 @@ h3
     text-transform: uppercase;
 }
 
-input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
-}
-
 input[type="text"]:focus {
     color: #333;
 }
 
 /* New Task */
-/*label[for='new-task'] {*/
-/*    display: block;*/
-/*    margin: 0 0 20px;*/
-/*}*/
+
 input#new-task {
     width: 318px;
 }
@@ -165,10 +153,6 @@ li {
     align-items: center;
 }
 
-li > * {
-    vertical-align: middle;
-}
-
 li > input[type="checkbox"] {
     margin: 0 10px;
 }
@@ -178,10 +162,6 @@ li > label {
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
-}
-
-li >    input[type="text"] {
-    width: 226px
 }
 
 button.delete img {
@@ -201,9 +181,6 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input[type=text] {
-    display: none
-}
 
 @media (max-width:768px) {
     .header {
