--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ li, h3 {
     list-style: none;
 }
 
+h3 {
+    color: #333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333;
+    padding: 30px 0 10px;
+    margin: 0;
+    text-transform: uppercase;
+}
+
 input,button{
     outline: none;
 }
@@ -69,7 +79,7 @@ button:hover {
 }
 
 .task-input__field {
-    width: 56%;
+    width: 318px;
     display: inline-block;
     flex-grow: 1;
     font-size: 18px;
@@ -81,6 +91,16 @@ button:hover {
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
+}
+
+.task-list__item {
+    overflow: hidden;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .task-list__text {
@@ -114,73 +134,33 @@ button:hover {
     display: none;
 }
 
+.task-list__input:focus {
+    color: #333;
+}
+
 .task-list__input--editable {
     display: inline-block;
     width: 224px
 }
 
-
-/* Heading */
-h3
-/*label[for='new-task']*/ {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
-}
-
-input[type="text"]:focus {
-    color: #333;
-}
-
-/* New Task */
-
-input#new-task {
-    width: 318px;
-}
-
-/* Task list */
-li {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-li > input[type="checkbox"] {
+.task-list__checkbox {
     margin: 0 10px;
 }
 
-li > label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
-}
-
-button.delete img {
+.remove-btn__img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.remove-btn__img:hover {
     transform: rotateZ(0);
 }
 
-/* Completed */
-ul#completed-tasks label {
+.task-list__text--done {
     text-decoration: line-through;
     color: #888;
 }
-
-/* Edit Task */
 
 @media (max-width:768px) {
     .header {
