--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Basic Style */
+/* basic style */
 body {
     background-color: #f8f8f8;
     color: #333;
@@ -39,7 +39,7 @@ button {
 }
 
 button:hover {
-    color: #3a3A3a;
+    color: #3a3a3a;
 }
 
 .header {
@@ -86,8 +86,8 @@ button:hover {
     line-height: 18px;
     height: 21px;
     padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
+    border: 1px solid #ddd;
+    background: #fff;
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
@@ -125,8 +125,8 @@ button:hover {
     line-height: 18px;
     height: 21px;
     padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
+    border: 1px solid #ddd;
+    background: #fff;
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
